# pycpptools

./: CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
cpp/: CMakeLists.txt
cpp/include/: utils.h
cpp/src/: main.cpp  utils.cpp
data/utils_algorithm/: edge_list.txt  pose_graph.g2o  poses_gt.txt  poses_localization.txt  poses_odometry.txt
dataset/utils_algorithm/: edge_list.txt
experiment/: pose_regression_20240823.md  rpr_eloftr_pnp_20240823.txt  rpr_loftr_pnp_20240823.txt  rpr_sift_lg_pnp_20240823.txt
python/utils_algorithm/: base_graph.py  base_node.py  shortest_path.py
python/utils_file/: tools_depthimage_align_scale.py  tools_image2pointcloud.py  tools_image_converter.py  tools_write_video.py
python/utils_math/: tools_eigen.py
python/utils_open3d/: tools_plane_fitting.py  tools_register_pointcloud.py
python/utils_ros/: tools_ros_msg_conversion.py
python/utils_sensor/: camera.py  camera_pinhole.py
rviz_cfg/: lidar_localization.rviz  lidar_localization_fake.rviz  topo_graph.rviz
src/python/utils_algorithm/: __init__.py  base_graph.py  base_node.py  gtsam_pose_fusion.ipynb  shortest_path.py  stamped_poses.py
src/python/utils_dataset/: analyze_nav_stat.py  analyze_odom_stat.py  gencamera_from_bag.py  genwaypoint_from_poses.py  samplefile_cross_dir.py  visualize_odom_image.py
src/python/utils_file/: tools_image2pointcloud.py
src/python/utils_math/: __init__.py  tools_eigen.py
src/python/utils_open3d/: lidar_localization_fake.py  tools_register_pointcloud.py
src/python/utils_ros/: tools_bag_change_time_tfstatic.py  tools_bag_merge.py  tools_bag_save_odom.py  tools_odom_save_bag.py  tools_ros_msg_conversion.py  tools_ros_visualization.py  tools_transform_odom.py
src/python/utils_sensor/: __init__.py  camera_pinhole.py  tools_depth_image.py
(+55 files in other folders)
